--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Amaro Ferraris</title>
+    <title>Not Olvia Ros anymore</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -49,16 +49,18 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                    Me vine a <br> tirar un pedo
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Muchas veces nos pasa que tenemos un pedo atascado entonces necesitamos
+                    apartarnos del resto de la gente para poder flatular en paz.
+                    Pero aparece alguien que nos quiere preguntar o comentar algo y puede advertir
+                    la situación. Por eso es importante esperar antes de desgraciarse, contar hasta 10
+                    analizando la situación, hasta tener la seguridad de que nadie se nos va a acercar.
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                    <button class="btn btn-lg btn-outline-info text-light me-4">No me ha pasado</button>
+                    <button class="btn btn-lg btn-info text-light">Me ha pasado</button>
                 </div>
             </div>
         </div>
@@ -68,43 +70,36 @@
     <section id="Acerca-de-mi" class="container text-center my-5">
 
 
-        <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+        <h2 class="display-3 fw-bold my-4">Un título gigante</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Se supone que este texto debería dar una descripción de alguna actividad pero sólo está describiendo el texto en sí.
         </p>
 
 
         <div class="row">
             <div class="col-12 col-md-4">
                 <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <h3 class="my-3 fw-bold">Fotógrafo de neumáticos desinflados</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Desde que era pequeño sentí una particular atracción hacia los
+                    neumáticos desinflados. Del tipo de vehículo que sea.
+                    Mi sueño es fotografiar los neumáticos desinflados de un avión.
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <h3 class="my-3 fw-bold">Comprador de heladeras</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Compro heladeras viejas baterías viejas, señora compro.
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <h3 class="my-3 fw-bold">Plegador de papeles</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Me gusta plegar papeles para que queden plegados, mi sueño es
+                    algún día superar los ocho pliegues.
                 </p>
             </div>
         </div>
@@ -113,22 +108,20 @@
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Mirá estas comidas</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Una carnecita</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            Mirá lo que está esta carnecita me vuelvo loco ahí parece cocinada
+                            pero está más cruda que dormir en la calle en invierno.
                         </p>
                         <button type="button" class="btn btn-outline-info">
-                            Ver más
+                            Vermús
                         </button>
                     </div>
                 </div>
@@ -137,12 +130,10 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Unas verdurita</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            Pero mirá lo que son estas verdurita me vuelvo loco ahí
+                            qué rico por dios encima tengo un hambre en este momento.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
