More text changes

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             qué rico por dios encima tengo un hambre en este momento.
                         </p>
                         <button type="button" class="btn btn-outline-info">
-                            Ver más
+                            Vermús
                         </button>
                     </div>
                 </div>
@@ -145,15 +145,12 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Otra carnecita</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            No por dios no me hagas esto me lo seguís haciendo te digo que tengo hambre me quiero matar.
                         </p>
                         <button type="button" class="btn btn-outline-info">
-                            Ver más
+                            Vermús
                         </button>
                     </div>
                 </div>
@@ -166,13 +163,11 @@
 
     <section id="Contacto" class="container my-5">
 
-        <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
+        <h2 class="display-4 fw-bold text-center my-4">Contentame</h2>
 
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
+        <p class="text-center my-4 d-none d-md-block">
+            Dale decime cosas.
+        </p>
 
         <form>
 
