--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
 
             <div class="my-3 text-end">
-                <button class="btn btn-info text-light">Enviar</button>
+                <button class="btn btn-info text-light">Embrión</button>
             </div>
 
 
@@ -201,7 +201,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Amaro Ferraris 1931. Todos los derechos reservados.</p>
     </footer>
 
 
